--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -26,3 +26,48 @@ a.blue-underline {
     text-align: center;
     margin: 1em 0;
 }
+
+.chosen-container-active.chosen-with-drop .chosen-single {
+    background-color: #fff;
+    border: 1px solid #dededf;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    -webkit-box-shadow: !important;
+    box-shadow: none !important;
+    -webkit-transition: !important;
+    -o-transition: !important;
+    transition: !important;
+}
+
+.chosen-container-single .chosen-single {
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    color: #555555;
+    display: block;
+    height: 34px;
+    overflow: hidden;
+    line-height: 34px;
+    padding: 0 0 0 8px;
+    position: relative;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+
+.chosen-container-active .chosen-single {
+  border-color: #85b7d9;
+    outline: 0;
+    box-shadow: 0 0 0 0 rgba(34, 36, 38, 0.35) inset;
+  }
+  .chosen-container .chosen-container-single {
+    hieght: 38px; 
+  }
