--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -106,7 +106,7 @@
 		label {margin-bottom: 10px;   }
 		input {margin-bottom: 26px; }
 		.btn {margin-top: 30px; margin-bottom: 30px; padding: 12px 12px; }
-		a.blue-underline {display: block; margin-bottom: 16px;     margin-top: -14px; }
+		a.blue-underline {display: block; margin-bottom: 16px;     margin-top: 10px; }
 
 		.hightlight-bg {
 			margin-right: -36px;
@@ -126,7 +126,31 @@
 			    font-size: 16px;
 			    margin-bottom: 10px; 
 		}
-	
+	.ui.selection.dropdown {
+		display: block;
+	    width: 100%;
+	    height: 38px;
+	    padding: 3px 12px;
+	    font-size: 14px;
+	    line-height: 1.42857;
+	    color: #555555;
+	    background-color: #fff;
+	    background-image: none;
+	    border: 1px solid #dededf;
+	    border-radius: 6px;
+	    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+	    &:focus {
+		    border-color: #85b7d9;
+		    outline: 0;
+		    box-shadow: 0 0 0 0 rgba(34, 36, 38, 0.35) inset;
+		}
+	}
+	.ui.label { 
+		font-weight: normal; 
+	}
+	.ui.dropdown .menu>.item { 
+		font-size: 1.3rem;
+	}
 
 
 	}
