--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -129,7 +129,7 @@
 	.ui.selection.dropdown {
 		display: block;
 	    width: 100%;
-	    height: 38px;
+	    min-height: 38px;
 	    padding: 3px 12px;
 	    font-size: 14px;
 	    line-height: 1.42857;
@@ -144,13 +144,25 @@
 		    outline: 0;
 		    box-shadow: 0 0 0 0 rgba(34, 36, 38, 0.35) inset;
 		}
-	}
-	.ui.label { 
-		font-weight: normal; 
-	}
-	.ui.dropdown .menu>.item { 
-		font-size: 1.3rem;
-	}
+		
+		}
+		.ui.label { 
+			font-weight: normal; 
+		}
+		.ui.dropdown .menu>.item { 
+			font-size: 1.3rem;
+		}
+
+		.ui.multiple.dropdown .dropdown.icon {
+		    margin: 0 -.71428571em 0 0;
+		    padding: 0.7em .5em;
+		}
+
+		.ui.multiple.dropdown>.text {
+		    
+		    margin: 0.55241em 0 .45240952em .71428571em;
+		    
+		}
 
 
 	}
