--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -42,6 +42,9 @@
 			  color: #fff;
 			  background-color: darken(#03e00d, 5%);
 			  border-color: #03e00d;
+			  padding: 4px 10px;
+			      font-size: 16px;
+			      margin-top: 15px;
 			}
 		}
 		.navbar-collapse {
@@ -96,3 +99,41 @@ border: 0;
 .navbar-nav > li > .dropdown-menu {
     margin-top: 5px; 
 }
+
+
+
+    .dropdown-menu.right:before {
+        position: absolute;
+        top: -13px;
+        left: 72%;
+        display: inline-block;
+        border-right: 12px solid transparent;
+        border-bottom: 12px solid #ccc;
+        border-left: 12px solid transparent;
+        border-bottom-color: rgba(0, 0, 0, 0.2);
+        content:'';
+    }
+	.dropdown-menu.right { 
+		margin-top: 0 !important;
+    	right: -16%;
+	}
+    
+
+
+
+	.dropdown-menu.left:before {
+        position: absolute;
+        top: -13px;
+        left: 9%;
+        display: inline-block;
+        border-right: 12px solid transparent;
+        border-bottom: 12px solid #ccc;
+        border-left: 12px solid transparent;
+        border-bottom-color: rgba(0, 0, 0, 0.2);
+        content:'';
+    }
+	.dropdown-menu.left { 
+		margin-top: 20px !important;
+    	left: 9% !important;
+	}
+    
