--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -56,7 +56,7 @@
     		padding-left: 15px
 		}
 		.dropdown-menu { 
-			background: #F8FAFB;
+			background: #fff;
 			    margin-top: 5px;
 			 li a {padding-bottom: 4px; }
 		}
@@ -137,3 +137,7 @@ border: 0;
     	left: 9% !important;
 	}
     
+
+
+  
+
