--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -85,6 +85,14 @@ border: 0;
 		width: 25px;
 		height: 24px;
 	}
+
+	.nav-check {
+		background: url(../img/nav-check.png) no-repeat;
+		display: inline-block;
+		width: 25px;
+		height: 24px;
+	}
+	
 	i.setting, i.logout {
 		    margin-top: -4px;
 	}
