--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -150,6 +150,7 @@
 	padding: 10px 30px;
 	margin-right: auto;
 	margin-left: auto;
+	min-height: 700px;
 	
 	header {
 		h3 {margin-top: 0; color: #000; }
@@ -246,7 +247,8 @@
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	margin-top: 30px; 
+	margin-top: 40px; 
+	margin-bottom: 50px; 
 }
 .project {
 	//max-width: 420px;
