--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -109,6 +109,16 @@ border: 0;
 }
 
 
+.navbar-nav {
+	h4 {
+		   padding-top: 20px;
+    	padding-bottom: 20px;
+    		@include breakpoint ($xs) {
+    			padding-left: 15px;	
+    		}
+
+	}
+}
 
     .dropdown-menu.right:before {
         position: absolute;
@@ -148,4 +158,5 @@ border: 0;
 
 
   
+
 
