--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -322,6 +322,7 @@
 
 
 .busi_work_place{
+	cursor: pointer;
 	width: 100%; 
 	background: #fff;
 	border: 1px solid #dae4e9;
@@ -331,7 +332,7 @@
 	margin-bottom: 30px;
 	header {
 		height: 41px;
-		padding: 6px 20px 14px;
+		padding: 14px 20px 14px;
 		p {color: #4d4d4d; font-weight: bold; margin-bottom: 0;  }
 		.inactive {color: #ff2e2e; }
 
@@ -345,7 +346,7 @@
 
 	footer {
 
-		padding: 4px 20px;
+		padding: 16px 20px;
 		img {margin-right: 5px;     margin-top: -3px; }
 		h4 {font-weight: 400; font-size: 28px; color: #4d4d4d; margin-bottom: 6px;  }
 		p {color: #8d99a5; font-size: 14px; }
