--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -36,6 +36,7 @@
 			  color: #fff;
 			  background-color: darken(#03e00d, 5%);
 			  border-color: #03e00d;
+			  border: 1px solid; 
 			}
 
 			a.btn-success:hover {
