--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -47,6 +47,33 @@
 	text-align: center;
 	p {margin: 0; font-size: 14px; color: #e10000; }
 }
+.success-notify-loging {
+	//display: none;
+	width: 95%;
+	 margin-left: auto;
+	 margin-right: auto;
+	margin-bottom: 20px; 
+	border: 1px solid #5DDE69;
+	border-radius: 34px;
+	background: #BEFFC4;
+	font-weight: bold;
+	color: #146A1C; 
+	i  {
+		color: #00C70E; 
+		font-size: 51px;
+    	margin-right: 18px;
+    	float: left;
+    	    margin-top: -8px;
+	}
+	
+		@include breakpoint ( max-width 500px ) {
+					margin-left: -20px;
+					margin-right: -20px;
+		}
+	    padding: 32px 28px;
+	text-align: center;
+	p {margin: 0; font-size: 14px; color: #146A1C;     max-width: 80%; display: inline-block;}
+}
 .signup-form-wraper {
 	margin: 5% auto;
 	
