--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -61,18 +61,22 @@
 	i  {
 		color: #00C70E; 
 		font-size: 51px;
-    	margin-right: 18px;
+    	margin-right: 8px;
     	float: left;
-    	    margin-top: -8px;
+    		@include breakpoint ($xs) {
+    			float: none;
+    			margin-bottom: 10px;
+    		}
+    	margin-top: -8px;
 	}
 	
-		@include breakpoint ( max-width 500px ) {
-					margin-left: -20px;
-					margin-right: -20px;
+		
+	padding: 32px 28px;
+		@include breakpoint ($xs) {
+			padding: 20px 20px;	
 		}
-	    padding: 32px 28px;
 	text-align: center;
-	p {margin: 0; font-size: 14px; color: #146A1C;     max-width: 80%; display: inline-block;}
+	h4 {margin: 0; font-size: 16px; color: #146A1C;     max-width: 84%; display: inline-block;}
 }
 .signup-form-wraper {
 	margin: 5% auto;
