--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -559,5 +559,6 @@
  	p {margin-bottom: 0px; }
  	border: 1px solid #ddd; 
  	max-width: 200px; 
- 	margin-top:  10%; 
+ 	margin-top:  10%;
+ 	margin-left: 40px; 
  }
