--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -19,7 +19,7 @@
 				padding-bottom: 22px;
 				background: transparent; color: #848484;  border-right: 0px solid #848484;  font-size: 16px;
 				transition: all 0.3s ease 0s;
-				font-weight: bold
+				font-weight: bold;
 				&:hover, &:active { background: transparent;     color: #000; }
 			}
 
