--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -25,7 +25,7 @@
 
 				&.active a, &.active:hover a, &.active:focus a { background: transparent; color: #000;  }
 			
-			a.btn { padding: 4px 10px; font-size: 16px;      margin-top: 20px; }
+			a.btn { padding: 4px 10px; font-size: 16px;   margin-top: 20px;     margin-right: 14px;}
 			a.btn-success {
 			  color: #fff;
 			  background-color: #03e00d;
@@ -46,7 +46,7 @@
 			  border-color: #03e00d;
 			  padding: 4px 10px;
 			      font-size: 16px;
-			      margin-top: 15px;
+			      margin-top: 20px;
 			}
 		}
 		.navbar-collapse {
@@ -121,7 +121,9 @@ border: 0;
 
 	}
 }
-
+.top-right-nav {
+	li:first-child a { font-weight: normal; font-size: 14px; }
+}
     .dropdown-menu.right:before {
         position: absolute;
         top: -13px;
