--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -302,7 +302,7 @@
 			
 	margin-bottom: 30px; 
 	header {
-		padding: 10px 20px;
+		padding: 20px 20px 10px;
 		img {margin-right: 5px;vertical-align: bottom; }
 		h4 {font-weight: 700; font-size: 22px; color: #000; margin-bottom: 6px;  }
 		p {color: #8d99a5; font-size: 14px; }
