--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -594,5 +594,64 @@
 			}
 
 	}
+	form {
+		.btn {
+    	margin-top: 0px;
+    	margin-bottom: 0px;
+	}
+	}
+}
 
+
+.profile-avatar-wrap {
+  width: 210px;
+  height: 150px; 
+  margin: auto;
+  padding: 2px; 
+  margin-bottom: 20px; 
+  position: relative;
+  pointer-events: none;
+  border: 1px solid #dddddd;
+  input#uploader {margin-bottom: 10px; margin-top: 10px; margin-right: auto; margin-left: auto;  display: inline-block; }
+}
+.profile-avatar-wrap:after {
+  /* Drag Prevention */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.profile-avatar-wrap img {
+  width: 100%;
+  display: block;
+
+}
+.location {
+  text-transform: uppercase;
+  color: #999;
+  letter-spacing: 1px;
+  margin: 0 0 10px 0;
+  font-size: 90%;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
