--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -71,12 +71,20 @@
 	}
 	
 		
-	padding: 32px 28px;
+	padding: 32px 24px;
 		@include breakpoint ($xs) {
 			padding: 20px 20px;	
 		}
 	text-align: center;
-	h4 {margin: 0; font-size: 16px; color: #146A1C;     max-width: 84%; display: inline-block;}
+	h4 {margin: 0; font-size: 16px; color: #146A1C;     max-width: 81%; display: inline-block;}
+
+	.notify-check {
+		display: inline-block;
+		background: url('../img/check-green.png') no-repeat; 
+		width: 56px;
+		height: 56px;
+
+	}
 }
 .signup-form-wraper {
 	margin: 5% auto;
