preject heding test

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -663,3 +663,15 @@
     cursor: inherit;
     display: block;
 }
+
+
+#sidebar-wrapper {
+	width: 25%;
+	float: left;
+}
+
+#page-content-wrapper {
+	width: 70%;
+	float: left;
+	
+}
