--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -124,6 +124,39 @@ border: 0;
 .top-right-nav {
 	li:first-child a { font-weight: normal; font-size: 13px; }
 }
+
+
+#sidebar-wrapper {
+	border-right: 1px solid #dbdbdb;
+	background: #fcfcfc; 
+	ul.sidebar-nav {
+		list-style: none; 
+		li {
+			padding: 20px;
+			border-top: 1px solid #dbdbdb;
+			a {
+				color: #323232; 
+				padding: 10px; 
+				
+				margin-right: 40px;
+				font-size: 18px;
+
+
+
+			}
+		}
+	}
+	header {
+		h5 {margin: 0 0 4px; font-weight: bold; font-size: 16px; }
+		p {margin-bottom: 20px; font-size: 16px }
+		padding: 34px;
+		span.bullet {display: block; color: #000; margin-bottom: 4px; font-size: 14px;  }
+	}
+
+}
+
+
+
     .dropdown-menu.right:before {
         position: absolute;
         top: -13px;
@@ -162,5 +195,7 @@ border: 0;
 
 
   
+
+
 
 
