--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -202,7 +202,8 @@
 	padding: 20px;
 	max-width: 650px;
 	margin: 0 auto;
-	margin-top: 50px; 
+	margin-top: 50px;
+	margin-bottom: 100px; 
 	
 	form {
 		
